<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitter Client</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline">Timeline</string>
    <string name="tweet_body_hint">Compose new Tweet....</string>
    <string name="char_left_label">140</string>
    <string name="tweet_button_label">Tweet</string>
    <string name="reply_button_label">Reply</string>
    <string name="retweet_button_label">Re-tweet</string>
    <string name="favorite_button_label">Favorite</string>
    <string name="title_activity_profile">ProfileActivity</string>

</resources>